force-app/main/default/objects/StudentCourse__c/StudentCourse__c.object-meta.xml
<CustomObject>
    <label>Student Course</label>
    <nameField>
        <label>Student Course Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Student Courses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>