force-app/main/default/objects/StudentCourse__c/fields/Enrollment_Status__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Status__c</fullName>
    <label>Enrollment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Enrolled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>