force-app/main/default/objects/StudentCourse__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <label>Student</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Student Courses</relationshipLabel>
    <relationshipName>Student_Courses</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>